--- a/package.json
+++ b/package.json
@@ -14,13 +14,16 @@
     "@clerk/clerk-expo": "^2.19.20",
     "@expo/vector-icons": "^15.0.3",
     "@react-native-community/datetimepicker": "latest",
+    "@react-native-community/slider": "^5.1.2",
     "@react-navigation/bottom-tabs": "^7.4.0",
     "@react-navigation/elements": "^2.6.3",
     "@react-navigation/native": "^7.1.8",
     "@supabase/supabase-js": "latest",
     "expo": "~54.0.32",
+    "expo-blur": "~15.0.8",
     "expo-constants": "~18.0.13",
     "expo-font": "~14.0.11",
+    "expo-glass-effect": "~0.1.8",
     "expo-haptics": "~15.0.8",
     "expo-image": "~3.0.11",
     "expo-linear-gradient": "latest",
