--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "expo": "~54.0.32",
     "expo-blur": "~15.0.8",
     "expo-constants": "~18.0.13",
+    "expo-file-system": "~19.0.21",
     "expo-font": "~14.0.11",
     "expo-glass-effect": "~0.1.8",
     "expo-haptics": "~15.0.8",
@@ -31,6 +32,7 @@
     "expo-notifications": "latest",
     "expo-router": "~6.0.22",
     "expo-secure-store": "latest",
+    "expo-sharing": "~14.0.8",
     "expo-splash-screen": "~31.0.13",
     "expo-status-bar": "~3.0.9",
     "expo-symbols": "~1.0.8",
