--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@clerk/clerk-expo": "^2.19.20",
     "@expo/vector-icons": "^15.0.3",
+    "@react-native-async-storage/async-storage": "2.2.0",
     "@react-native-community/datetimepicker": "latest",
     "@react-native-community/slider": "^5.1.2",
     "@react-navigation/bottom-tabs": "^7.4.0",
