--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "react-native": "0.81.5",
     "react-native-gesture-handler": "~2.28.0",
     "react-native-purchases": "latest",
+    "react-native-purchases-ui": "latest",
     "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
