--- a/.github/workflows/preview.yml
+++ b/.github/workflows/preview.yml
@@ -19,11 +19,11 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v5
 
-      - name: Setup Node
-        uses: actions/setup-node@v6
+      - name: Setup Bun
+        uses: oven-sh/setup-bun@v1
         with:
-          node-version: 22
-          cache: yarn
+          bun-version: latest
+
 
       - name: Setup EAS
         uses: expo/expo-github-action@v8
@@ -32,7 +32,8 @@ jobs:
           token: ${{ secrets.EXPO_TOKEN }}
 
       - name: Install dependencies
-        run: yarn install
+        run: bun install
+
 
       - name: Create preview
         uses: expo/expo-github-action/preview@v8
