--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@react-navigation/elements": "^2.6.3",
     "@react-navigation/native": "^7.1.8",
     "@supabase/supabase-js": "latest",
+    "@bacons/apple-targets": "^3.0.6",
     "buffer": "^6.0.3",
     "expo": "~54.0.32",
     "expo-auth-session": "~7.0.10",
