--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "dev": "APP_VARIANT=development npx expo start"
   },
   "dependencies": {
+    "@bacons/apple-targets": "^3.0.6",
     "@clerk/clerk-expo": "^2.19.20",
     "@expo/vector-icons": "^15.0.3",
     "@react-native-async-storage/async-storage": "2.2.0",
@@ -21,7 +22,6 @@
     "@react-navigation/elements": "^2.6.3",
     "@react-navigation/native": "^7.1.8",
     "@supabase/supabase-js": "latest",
-    "@bacons/apple-targets": "^3.0.6",
     "buffer": "^6.0.3",
     "expo": "~54.0.32",
     "expo-auth-session": "~7.0.10",
@@ -45,6 +45,7 @@
     "expo-status-bar": "~3.0.9",
     "expo-symbols": "~1.0.8",
     "expo-system-ui": "~6.0.9",
+    "expo-updates": "~29.0.16",
     "expo-web-browser": "~15.0.10",
     "posthog-react-native": "latest",
     "react": "19.1.0",
