--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@react-navigation/bottom-tabs": "^7.4.0",
     "@react-navigation/elements": "^2.6.3",
     "@react-navigation/native": "^7.1.8",
+    "@sentry/react-native": "^8.0.0",
     "@supabase/supabase-js": "latest",
     "buffer": "^6.0.3",
     "expo": "~54.0.32",
