--- a/package.json
+++ b/package.json
@@ -9,7 +9,12 @@
     "ios": "expo run:ios",
     "web": "expo start --web",
     "lint": "expo lint",
-    "dev": "APP_VARIANT=development npx expo start"
+    "dev": "APP_VARIANT=development npx expo start",
+    "test": "vitest run",
+    "test:watch": "vitest",
+    "test:coverage": "vitest run --coverage",
+    "migrate": "npx convex run actions/migrationImport:importFromSupabase",
+    "verify-migration": "tsx scripts/verify-migration.ts"
   },
   "dependencies": {
     "@bacons/apple-targets": "^3.0.6",
@@ -22,8 +27,8 @@
     "@react-navigation/elements": "^2.6.3",
     "@react-navigation/native": "^7.1.8",
     "@sentry/react-native": "^8.0.0",
-    "@supabase/supabase-js": "latest",
     "buffer": "^6.0.3",
+    "convex": "^1.32.0",
     "expo": "~54.0.32",
     "expo-auth-session": "~7.0.10",
     "expo-av": "~16.0.8",
@@ -36,6 +41,7 @@
     "expo-glass-effect": "~0.1.8",
     "expo-haptics": "~15.0.8",
     "expo-image": "~3.0.11",
+    "expo-insights": "~0.10.8",
     "expo-linear-gradient": "latest",
     "expo-linking": "~8.0.11",
     "expo-notifications": "latest",
@@ -65,9 +71,14 @@
   },
   "devDependencies": {
     "@types/react": "~19.1.0",
-    "typescript": "~5.9.2",
+    "@vitest/coverage-v8": "^4.0.18",
+    "convex-test": "^0.0.41",
+    "dotenv": "^17.3.1",
     "eslint": "^9.25.0",
-    "eslint-config-expo": "~10.0.0"
+    "eslint-config-expo": "~10.0.0",
+    "tsx": "^4.21.0",
+    "typescript": "~5.9.2",
+    "vitest": "^4.0.18"
   },
   "private": true
 }
